html and css modified and script.js added

--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>web site</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">	
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-eqiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css" />
+    <title>web site</title>
 </head>
 <body>
-	<header>
-	<img src="image/dream.jpg" >
-   </header>
-	<nav>
-	    <div class="wrapper">
-			<ul>
-			   <li><a href="index.html">HOME</a></li>
-               <li><a href="about.html">About me</a></li>
-               <li><a href="portfolio.html">Portfolio</a></li>
-               <li><a href="contact.html">Contact</a></li>
-               <li><a href="report.html">Report</a></li>
-            </ul>
-        </div>
-    </nav>
+    <div class="container">
+     <nav class="navbar">
+        <div class="hamburger-menu">
+           <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
+          </div>
 
-        <div class="wrapper">
-            
-            
-        </div>
-
-        <div class="title">
-            <h2> Hey!  My name is riya shrestha. 
-            This is my first time building an interactive website. </h2>
-        </div>
-         	<a href="#">this is alink</a>
-  
+     <ul class="nav-list" id="nav-list"> 
+      <li class="nav-item">
+        <a href="index.html" class="nav-link">home</a>
+       </li>
+      <li class="nav-item">
+        <a href="portfolio.html" class="nav-link">portfolio</a>
+    </li>
+      <li class="nav-item">
+        <a href="contact.html" class="nav-link">contact</a>
+     </li>
+      <li class="nav-item">
+        <a href="cv.html" class="nav-link">cv</a>
+      </li>
+      <li class="nav-item">
+        <a href="report.html" class="nav-link">report</a>
+      </li>
+    </ul>
+</nav>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
