--- a/cv.html
+++ b/cv.html
@@ -1,5 +1,4 @@
-
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
@@ -13,15 +12,15 @@
     <title>web site</title>
 </head>
 <body>
-    <div class="container">
-     <nav class="navbar">
-        <div class="hamburger-menu">
+     <div class="container">
+       <nav class="navbar">
+         <div class="hamburger-menu">
            <div class="line line-1"></div>
             <div class="line line-2"></div>
             <div class="line line-3"></div>
-          </div>
+        </div>
 
-     <ul class="nav-list" id="nav-list"> 
+     <ul class="nav-list">
       <li class="nav-item">
         <a href="index.html" class="nav-link">home</a>
        </li>
@@ -38,8 +37,11 @@
         <a href="report.html" class="nav-link">report</a>
       </li>
     </ul>
+  </div>
 </nav>
 </div>
 <script src="script.js"></script>
+    <h1>cv<h1>
 </body>
 </html>
+ 
