contact page created and index modified

--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <meta http-eqiv="X-UA-Compatible" content="ie=edge" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css" />
-    <title>web site</title>
+    <link rel="stylesheet" href="styles.css" >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <title>contact me</title>
 </head>
 <body>
-    <div class="container">
+    <!--contact section start-->
+     <section class="contact">
+       <div class="content">
+         <h2>contact us</h2>
+        </div>
+        <div class="container-c">
+        <div class="contactInfo">
+           <div class="box">
+             <div classs="icon"><i class="fas fa-map-marker-alt"></i></div>
+              <div class="text">
+                <h3>Adress</h3>
+                <p> gokarneshwor-2,kathmandu </p>
+               </div>
+           </div>
+             <div class="box">
+              <div classs="icon"><i class="fas fa-phone"></i></div>
+               <div class="text">
+                <h3>phone</h3>
+                <p>9844591296</p>
+               </div>
+           </div>
+              <div class="box">
+               <div classs="icon"><i class="fas fa-envelope"></i></div>
+                <div class="text">
+                <h3>Email</h3>
+                <p>shrestharia08@gmail.com</p>
+               </div>
+          </div>
+      </div>
+
+       <div class="contact-form">
+        <form>
+            <h2>Send Message</h2>
+            <div class="inputbox">
+                <input type="text" name="" required="required">
+                <span>FULL NAME</span>
+            </div>
+            <div class="inputbox">
+                <input type="text" name="" required="required">
+                <span>Email</span>
+            </div>
+            <div class="inputbox">
+                <textarea required="required"></textarea>
+                <span>Type your message...</span>
+            </div>
+            <div class="inputbox">
+                <input type="submit" name="" value="send" >
+            </div>
+        </form>
+    </div>
+    </div>
+   <!--contact section end-->
+
        <nav class="navbar">
          <div class="hamburger-menu">
            <div class="line line-1"></div>
             <div class="line line-2"></div>
             <div class="line line-3"></div>
         </div>
+    
+
      <ul class="nav-list" id="nav-list"> 
       <li class="nav-item">
         <a href="index.html" class="nav-link">home</a>
@@ -26,9 +81,9 @@
       <li class="nav-item">
         <a href="portfolio.html" class="nav-link">portfolio</a>
     </li>
-      <li class="nav-item">
+    <li class="nav-item">
         <a href="contact.html" class="nav-link">contact</a>
-     </li>
+      </li>  
       <li class="nav-item">
         <a href="cv.html" class="nav-link">cv</a>
       </li>
@@ -36,6 +91,9 @@
         <a href="report.html" class="nav-link">report</a>
       </li>
     </ul>
+    
+   </div>
+  </div>
 </nav>
 </div>
 <script src="script.js"></script>
