--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,27 +10,28 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
-    <title>portfolio</title>
+    <title>web site</title>
 </head>
 <body>
-	 <div class="container">
-       <nav class="navbar">
-         <div class="hamburger-menu">
+    <div class="container">
+    <div class="bgimage">
+     <nav class="navbar">
+        <div class="hamburger-menu">
            <div class="line line-1"></div>
             <div class="line line-2"></div>
             <div class="line line-3"></div>
-        </div>
+          </div>
 
-     <ul class="nav-list">
+     <ul class="nav-list" id="nav-list"> 
       <li class="nav-item">
         <a href="index.html" class="nav-link">home</a>
-       </li> 
-     <li class="nav-item">
+       </li>
+      <li class="nav-item">
         <a href="portfolio.html" class="nav-link">portfolio</a>
-     </li>
-     <li class="nav-item">
+    </li>
+    <li class="nav-item">
         <a href="contact.html" class="nav-link">contact</a>
-      </li>
+     </li>
       <li class="nav-item">
         <a href="cv.html" class="nav-link">cv</a>
       </li>
@@ -37,10 +39,13 @@
         <a href="report.html" class="nav-link">report</a>
       </li>
     </ul>
-  </div>
-</nav>
+    </nav>
+    <div class="welcome-text">
+      <h1>Hi! I'm riya</h1>
+      <a href="#">contact me</a>
+    </div>
+ </div>
 </div>
 <script src="script.js"></script>
- </body>
- </html>
- 
+</body>
+</html>
