new file added and portfolio modified

--- a/cv.html
+++ b/cv.html
@@ -1,17 +1,120 @@
   <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-eqiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">    
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
-    <title>web site</title>
+    <title>cv</title>
 </head>
 <body>
+    <!--cv starts-->
+    <div class="box">
+    <div class="header-v">
+    <div class="header-left">
+       <div class="name">
+            <h1 class="first-name">RIYA</h1>
+            <h1 class="last-name">SHRESTHA</h1>
+        </div>
+    </div>
+    <div class="header-right">
+        <div class="email">
+            <p>shrestharia08@gmail.com></p>
+            <i class="fas fa-envelope"></i>
+        </div>
+        <div class="phone">
+            <p>9844591296</p>
+            <i class="fas fa-phone"></i>
+        </div>
+        <div class="Adress"></i>
+            <i class="fas fa-adress-card"></i>
+        </div>
+       </div>
+    </div>
+     <hr />
+     <div class="objective">
+        <div class="obj-head grey">
+            <i class="fas fa-bullseye icon"></i>
+            <h2>Objective</h2>
+            </div> 
+            <p>
+             It had been her dream for years but Dana had failed to take any action toward making it come true. There had always been a good excuse to delay or prioritize another project.
+            </p>      
+        </div>
+       <div class="education">
+        <div class="ed-head grey">
+        <i class="fas fa-school icon"></i>
+        <h2>Education</h2>
+    </div>
+    <table>
+        <tr>
+          <th>Board</th>
+          <th>Institution</th>
+          <th>Year of passing</th>
+          <th>Percentage</th>
+        </tr>
+        <tr>
+          <td>computing</td>
+          <td>nami</td>
+          <td>2025</td>
+          <td>A</td>
+        </tr>
+        <tr>
+        <td>intermediate</td>
+          <td>Xavier international</td>
+          <td>2020</td>
+          <td>A</td>
+        </tr>
+        <tr>
+          <td>ssc</td>
+          <td>HAS</td>
+          <td>2020</td>
+          <td>A+</td> 
+        </tr>
+    </table>
+    </div>
+    <div class="skills">
+        <div class="skill-head grey">
+            <i class="fas fa-tools icon"></i>
+            <h2>technical skills<h2>
+        </div>
+        <ul>
+            <li>HTML</li>
+            <li>css</li>
+        </ul>
+        </div>
+        <div class="Personal information">
+            <div class="personal information-head grey">
+                <i class="fas fa-file"></i>"
+            <h3>personal information</h3>
+            <p>
+            <ul>
+                <li>
+                    A young and hardworking student.I beleiving inteam work and teambuilding skills as esssentials.
+                <li>
+                    <span id="course-name">languages known:
+                    </span>English, hindi ,nepali and newari</li>
+                    <li>
+                    <span id="course-name">hobbies:</span>I love reading books / listening to music, surfing internet, painting.</li> 
+                </ul>
+                </p>
+            </div>       
+            <div class="Declaration">
+                <div class="Declaration grey">
+                    <i class="fas fa-hand-paper"></i>
+                <h3>Declaration</h3>
+            <p>
+            I hereby declare that the details furnished above are true and correct to the best of my knowledge.
+            </p>
+        </div>
+    </div>
+</div>
+
+             
+        <!--cv ends-->
      <div class="container">
        <nav class="navbar">
          <div class="hamburger-menu">
@@ -41,7 +144,6 @@
 </nav>
 </div>
 <script src="script.js"></script>
-    <h1>cv<h1>
+</header-v>
 </body>
 </html>
- 
