--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <meta http-eqiv="X-UA-Compatible" content="ie=edge" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">    
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>contact me</title>
@@ -20,21 +18,21 @@
         </div>
         <div class="container-c">
         <div class="contactInfo">
-           <div class="box">
+           <div class="box-x">
              <div classs="icon"><i class="fas fa-map-marker-alt"></i></div>
               <div class="text">
                 <h3>Adress</h3>
                 <p> gokarneshwor-2,kathmandu </p>
                </div>
            </div>
-             <div class="box">
+             <div class="box-x">
               <div classs="icon"><i class="fas fa-phone"></i></div>
                <div class="text">
                 <h3>phone</h3>
                 <p>9844591296</p>
                </div>
            </div>
-              <div class="box">
+              <div class="box-x">
                <div classs="icon"><i class="fas fa-envelope"></i></div>
                 <div class="text">
                 <h3>Email</h3>
@@ -65,7 +63,7 @@
     </div>
     </div>
    <!--contact section end-->
-
+      <div class="container">
        <nav class="navbar">
          <div class="hamburger-menu">
            <div class="line line-1"></div>
