--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-eqiv="X-UA-Compatible" content="ie=edge" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">    
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
     <title>web site</title>
 </head>
 <body>
+    <header>
     <div class="container">
-    <div class="bgimage">
+    <div class="wrapper">
+    </div>
      <nav class="navbar">
         <div class="hamburger-menu">
            <div class="line line-1"></div>
@@ -47,5 +47,6 @@
  </div>
 </div>
 <script src="script.js"></script>
+</header>
 </body>
 </html>
