--- a/portfolio.html
+++ b/portfolio.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-eqiv="X-UA-Compatible" content="ie=edge" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">    
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
     <title>portfolio</title>
 </head>
-<body>
+<body-p>
+	<header-v>
+	<!--portfolio starts-->
+	<div class="image-grid">
+	    <img class="grid-image" src="image/img-1.png" />
+		<img class="grid-image" src="image/img-2.png" />
+		<img class="grid-image" src="image/img-3.png" />
+        <img class="grid-image" src="image/img-4.png" />
+	</div>
+	<!--portfolio ends-->
 	 <div class="container">
-       <nav class="navbar">
+       <nav class="navbar"> 	
          <div class="hamburger-menu">
            <div class="line line-1"></div>
             <div class="line line-2"></div>
-            <div class="line line-3"></div>
+             <div class="line line-3"></div>
         </div>
 
      <ul class="nav-list">
@@ -40,7 +47,7 @@
   </div>
 </nav>
 </div>
-<script src="script.js"></script>
- </body>
+<script src="script.js"></script>1
+ </body-p>
  </html>
  
