--- a/report.html
+++ b/report.html
@@ -44,3 +44,44 @@
     <h1>report<h1>
 </body>
 </html>
+
+
+   .main{
+    position: relative; 
+    height: 100vh;
+    width: 100%;
+}
+.main h1{
+    position: relative;
+    height: auto;
+    width: 500px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 5% 0 2% 0;
+    text-align: center;
+    font-size: 2.8cm;
+    font-weight: 650;
+    letter-spacing: 1.5px;
+    color: #017bf5;
+    border-left: 5px solid #017bf5;
+    border-right: 5px solid #017bf5;
+    background: rgba(0, 0, 0.05);
+}
+.main .gallery{
+    position: relative;
+    height: auto;
+    width: 90%;
+    margin: auto;
+    padding: 45px 0;
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 2vmin; 
+    grid-auto-flow: dense;
+}
+.main .gallery .img{
+    position: relative;
+    height: auto auto auto;
+    width: auto;
+    padding: 45px 0;
+    overflow: hidden;
+}
