--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <title>contact me</title>
+    <link rel="stylesheet" media="screen and (max-width:991px)" href="styles.css">
+    <title>Contact me</title>
 </head>
 <body>
     <!--contact section start-->
      <section class="contact">
        <div class="content">
-         <h2>contact us</h2>
+         <h2>CONTACT US</h2>
         </div>
         <div class="container-c">
         <div class="contactInfo">
@@ -64,6 +65,7 @@
     </div>
    <!--contact section end-->
       <div class="container">
+    <div class="bgimage">
        <nav class="navbar">
          <div class="hamburger-menu">
            <div class="line line-1"></div>
@@ -89,10 +91,9 @@
         <a href="report.html" class="nav-link">report</a>
       </li>
     </ul>
-    
-   </div>
-  </div>
-</nav>
+   </nav>
+</div>
+</div>
 </div>
 <script src="script.js"></script>
 </body>
