--- a/cv.html
+++ b/cv.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" media="screen and (max-width:750px)" href="styles.css">
     <title>cv</title>
 </head>
 <body>
@@ -30,7 +31,7 @@
             <i class="fas fa-phone"></i>
         </div>
         <div class="Adress"></i>
-            <i class="fas fa-adress-card"></i>
+            <i class="fas fa-mao-marker-alt"></i>
         </div>
        </div>
     </div>
@@ -41,7 +42,7 @@
             <h2>Objective</h2>
             </div> 
             <p>
-             It had been her dream for years but Dana had failed to take any action toward making it come true. There had always been a good excuse to delay or prioritize another project.
+            "To be an achiever with challenging assignment by utilizing knowledge and gaining and learning new things to progress personally and professionally"
             </p>      
         </div>
        <div class="education">
@@ -54,22 +55,22 @@
           <th>Board</th>
           <th>Institution</th>
           <th>Year of passing</th>
-          <th>Percentage</th>
+          <th>Grade</th>
         </tr>
         <tr>
-          <td>computing</td>
+          <td>Computing</td>
           <td>nami</td>
-          <td>2025</td>
-          <td>A</td>
+          <td>--</td>
+          <td>--</td>
         </tr>
         <tr>
-        <td>intermediate</td>
+        <td>Intermediate</td>
           <td>Xavier international</td>
           <td>2020</td>
           <td>A</td>
         </tr>
         <tr>
-          <td>ssc</td>
+          <td>SSC</td>
           <td>HAS</td>
           <td>2020</td>
           <td>A+</td> 
