--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
-    <title>web site</title>
+    <link rel="stylesheet" media="screen and (max-width:800px)" href="styles.css">
+    <title>Home</title>
 </head>
 <body>
     <header>
@@ -42,7 +43,7 @@
     </nav>
     <div class="welcome-text">
       <h1>Hi! I'm riya</h1>
-      <a href="#">contact me</a>
+      <a href="contact.html">contact me</a>
     </div>
  </div>
 </div>
