--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
-    <title>portfolio</title>
+    <title>Portfolio</title>
 </head>
 <body-p>
 	<header-v>
@@ -20,6 +20,7 @@
 	</div>
 	<!--portfolio ends-->
 	 <div class="container">
+	 <div class="bgimage">
        <nav class="navbar"> 	
          <div class="hamburger-menu">
            <div class="line line-1"></div>
@@ -27,7 +28,7 @@
              <div class="line line-3"></div>
         </div>
 
-     <ul class="nav-list">
+     <ul class="nav-list" id="nav-list">
       <li class="nav-item">
         <a href="index.html" class="nav-link">home</a>
        </li> 
@@ -44,8 +45,8 @@
         <a href="report.html" class="nav-link">report</a>
       </li>
     </ul>
+  </nav>
   </div>
-</nav>
 </div>
 <script src="script.js"></script>1
  </body-p>
