--- a/report.html
+++ b/report.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-eqiv="X-UA-Compatible" content="ie=edge" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">    
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
-    <title>web site</title>
+    <title>Report</title>
 </head>
 <body>
+    <!--report starts-->
+    <div class="box-r">       
+    <div class="header-r">
+         <h1 class="title">Report</h1>
+    </div>
+
+    <div class="report">
+        <h2>report</h2>
+        <p>
+           
+        </p>
+    </div>
+    <!--report ends-->
     <div class="container">
        <nav class="navbar">
          <div class="hamburger-menu">
@@ -44,44 +55,3 @@
     <h1>report<h1>
 </body>
 </html>
-
-
-   .main{
-    position: relative; 
-    height: 100vh;
-    width: 100%;
-}
-.main h1{
-    position: relative;
-    height: auto;
-    width: 500px;
-    left: 50%;
-    transform: translateX(-50%);
-    margin: 5% 0 2% 0;
-    text-align: center;
-    font-size: 2.8cm;
-    font-weight: 650;
-    letter-spacing: 1.5px;
-    color: #017bf5;
-    border-left: 5px solid #017bf5;
-    border-right: 5px solid #017bf5;
-    background: rgba(0, 0, 0.05);
-}
-.main .gallery{
-    position: relative;
-    height: auto;
-    width: 90%;
-    margin: auto;
-    padding: 45px 0;
-    display: grid;
-    grid-template-columns: auto;
-    grid-gap: 2vmin; 
-    grid-auto-flow: dense;
-}
-.main .gallery .img{
-    position: relative;
-    height: auto auto auto;
-    width: auto;
-    padding: 45px 0;
-    overflow: hidden;
-}
