modified webpages and new image added

--- a/contact.html
+++ b/contact.html
@@ -3,38 +3,37 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <meta http-eqiv="X-UA-Compatible" content="ie=edge" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css" >
+    <link rel="stylesheet" href="styles.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" media="screen and (max-width:991px)" href="styles.css">
+    <link rel="stylesheet" media="screen and (max-width:991px)" href="styles.css"/>
     <title>Contact me</title>
 </head>
 <body>
     <!--contact section start-->
-     <section class="contact">
+     <section class="contact" >
        <div class="content">
          <h2>CONTACT US</h2>
         </div>
         <div class="container-c">
         <div class="contactInfo">
            <div class="box-x">
-             <div classs="icon"><i class="fas fa-map-marker-alt"></i></div>
+             <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
               <div class="text">
                 <h3>Adress</h3>
                 <p> gokarneshwor-2,kathmandu </p>
                </div>
            </div>
              <div class="box-x">
-              <div classs="icon"><i class="fas fa-phone"></i></div>
+              <div class="icon"><i class="fas fa-phone"></i></div>
                <div class="text">
                 <h3>phone</h3>
                 <p>9844591296</p>
                </div>
            </div>
               <div class="box-x">
-               <div classs="icon"><i class="fas fa-envelope"></i></div>
+               <div class="icon"><i class="fas fa-envelope"></i></div>
                 <div class="text">
                 <h3>Email</h3>
                 <p>shrestharia08@gmail.com</p>
@@ -46,11 +45,11 @@
         <form>
             <h2>Send Message</h2>
             <div class="inputbox">
-                <input type="text" name="" required="required">
+                <input type="text" name="type=hidden" required="required">
                 <span>FULL NAME</span>
             </div>
             <div class="inputbox">
-                <input type="text" name="" required="required">
+                <input type="text" name="type=hidden" required="required">
                 <span>Email</span>
             </div>
             <div class="inputbox">
@@ -58,7 +57,7 @@
                 <span>Type your message...</span>
             </div>
             <div class="inputbox">
-                <input type="submit" name="" value="send" >
+                <input type="submit" name="type=hidden" value="send" >
             </div>
         </form>
     </div>
@@ -94,7 +93,7 @@
    </nav>
 </div>
 </div>
-</div>
 <script src="script.js"></script>
+</section>
 </body>
 </html>
