--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-eqiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
@@ -30,8 +29,9 @@
             <p>9844591296</p>
             <i class="fas fa-phone"></i>
         </div>
-        <div class="Adress"></i>
-            <i class="fas fa-mao-marker-alt"></i>
+        <div class="Adress">
+            <p>nayapati-4,ktm</p>
+            <i class="fas fa-map-marker-alt"></i>
         </div>
        </div>
     </div>
@@ -42,7 +42,7 @@
             <h2>Objective</h2>
             </div> 
             <p>
-            "To be an achiever with challenging assignment by utilizing knowledge and gaining and learning new things to progress personally and professionally"
+            " To be an achiever with challenging assignment by utilizing knowledge and gaining and learning new things to progress personally and professionally "
             </p>      
         </div>
        <div class="education">
@@ -77,10 +77,10 @@
         </tr>
     </table>
     </div>
-    <div class="skills">
-        <div class="skill-head grey">
-            <i class="fas fa-tools icon"></i>
-            <h2>technical skills<h2>
+    <div class="Technical-skills">
+        <div class="Technical-skills-head grey">
+        <i class="fas fa-tools icon"></i>
+         <h2>Technical skills</h2>
         </div>
         <ul>
             <li>HTML</li>
@@ -89,32 +89,30 @@
         </div>
         <div class="Personal information">
             <div class="personal information-head grey">
-                <i class="fas fa-file"></i>"
-            <h3>personal information</h3>
-            <p>
+                <i class="fas fa-file"></i>
+            <h2>personal information</h2>
+        </div>
             <ul>
                 <li>
                     A young and hardworking student.I beleiving inteam work and teambuilding skills as esssentials.
-                <li>
-                    <span id="course-name">languages known:
-                    </span>English, hindi ,nepali and newari</li>
-                    <li>
-                    <span id="course-name">hobbies:</span>I love reading books / listening to music, surfing internet, painting.</li> 
+                </li>
                 </ul>
-                </p>
+                <div>
+                    <span id="course-name">languages known </span>
+                    <p>English, hindi ,nepali and newari</p>
+                    <span id="known-name">hobbies:</span>
+                    <p>I love reading books / listening to music, surfing internet, painting.</p> 
             </div>       
             <div class="Declaration">
-                <div class="Declaration grey">
+                <div class="Declaration-head grey">
                     <i class="fas fa-hand-paper"></i>
-                <h3>Declaration</h3>
+                <h2>Declaration</h2>
+            </div>
             <p>
             I hereby declare that the details furnished above are true and correct to the best of my knowledge.
             </p>
         </div>
-    </div>
-</div>
-
-             
+    </div>   
         <!--cv ends-->
      <div class="container">
        <nav class="navbar">
@@ -141,10 +139,9 @@
         <a href="report.html" class="nav-link">report</a>
       </li>
     </ul>
-  </div>
-</nav>
+ </nav>
+</div>
 </div>
 <script src="script.js"></script>
-</header-v>
 </body>
 </html>
