--- a/portfolio.html
+++ b/portfolio.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-eqiv="X-UA-Compatible" content="ie=edge" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" media="screen and (max-width:640px, 960px, 1280px)" href="styles.css">
     <title>Portfolio</title>
 </head>
 <body-p>
-	<header-v>
+<header-v>
 	<!--portfolio starts-->
+	<div class="main">
+		<h1>PORTFOLIO</h1>
+	</div>
 	<div class="image-grid">
-	    <img class="grid-image" src="image/img-1.png" />
-		<img class="grid-image" src="image/img-2.png" />
-		<img class="grid-image" src="image/img-3.png" />
-        <img class="grid-image" src="image/img-4.png" />
+	    <img class="grid-image" src="image/img-1.png" alt="" />
+		<img class="grid-image" src="image/img-2.png" alt="" />
+		<img class="grid-image" src="image/img-3.png" alt="" />
 	</div>
 	<!--portfolio ends-->
 	 <div class="container">
@@ -48,7 +50,8 @@
   </nav>
   </div>
 </div>
-<script src="script.js"></script>1
+<script src="script.js"></script>
+</header-v>
  </body-p>
  </html>
  
