modified cv and style.css

--- a/cv.html
+++ b/cv.html
@@ -37,7 +37,7 @@
     </div>
      <hr />
      <div class="objective">
-        <div class="obj-head grey">
+        <div class="obj-head blue">
             <i class="fas fa-bullseye icon"></i>
             <h2>Objective</h2>
             </div> 
@@ -46,7 +46,7 @@
             </p>      
         </div>
        <div class="education">
-        <div class="ed-head grey">
+        <div class="ed-head blue">
         <i class="fas fa-school icon"></i>
         <h2>Education</h2>
     </div>
@@ -66,7 +66,7 @@
         <tr>
         <td>Intermediate</td>
           <td>Xavier international</td>
-          <td>2020</td>
+          <td>2017</td>
           <td>A</td>
         </tr>
         <tr>
@@ -78,7 +78,7 @@
     </table>
     </div>
     <div class="Technical-skills">
-        <div class="Technical-skills-head grey">
+        <div class="Technical-skills-head blue">
         <i class="fas fa-tools icon"></i>
          <h2>Technical skills</h2>
         </div>
@@ -88,23 +88,23 @@
         </ul>
         </div>
         <div class="Personal information">
-            <div class="personal information-head grey">
+            <div class="personal information-head blue">
                 <i class="fas fa-file"></i>
             <h2>personal information</h2>
         </div>
             <ul>
                 <li>
-                    A young and hardworking student.I beleiving inteam work and teambuilding skills as esssentials.
+                    A young and hardworking student. I beleiving in team work and teambuilding skills as esssentials.
                 </li>
                 </ul>
                 <div>
-                    <span id="course-name">languages known </span>
+                    <span id="course-name"> languages known: </span>
                     <p>English, hindi ,nepali and newari</p>
                     <span id="known-name">hobbies:</span>
                     <p>I love reading books / listening to music, surfing internet, painting.</p> 
             </div>       
             <div class="Declaration">
-                <div class="Declaration-head grey">
+                <div class="Declaration-head blue">
                     <i class="fas fa-hand-paper"></i>
                 <h2>Declaration</h2>
             </div>
